[gd_scene load_steps=17 format=2]

[ext_resource path="res://SeletorFase.gd" type="Script" id=1]
[ext_resource path="res://ImagensDesing/BackGround.png" type="Texture" id=2]
[ext_resource path="res://IntroHeadR-Base.otf" type="DynamicFontData" id=3]
[ext_resource path="res://ImagensDesing/Furelise.png" type="Texture" id=4]
[ext_resource path="res://ImagensDesing/Megalovania.png" type="Texture" id=5]
[ext_resource path="res://ImagensDesing/MibMi (1).png" type="Texture" id=6]
[ext_resource path="res://ImagensDesing/Voltar.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 392, 40 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 392, 40 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 392, 40 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 392, 40 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 392, 40 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 392, 40 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 392, 40 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 392, 40 )

[node name="SeletorFase" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = -85.0
margin_right = 196.0
margin_bottom = 154.0
rect_min_size = Vector2( 392, 239 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 392.0
margin_bottom = 239.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 392.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Selecione uma m√∫sica"

[node name="Fase1" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 392.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="Fase2" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 392.0
margin_bottom = 127.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Fase3" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 392.0
margin_bottom = 171.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = SubResource( 6 )
custom_styles/normal = SubResource( 7 )

[node name="Voltar" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 175.0
margin_right = 392.0
margin_bottom = 215.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
